# skem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  renovate.json5
.claude/: CLAUDE.md
.github/release-please/: config.json
.github/workflows/: build-and-publish.yaml  lint-and-test.yaml  release-main.yaml  wc-rust-test.yaml
docs/: commands.md  configuration.md  how-it-works.md
examples/: .skem.yaml  README.md
examples/schemas/openapi/: api.yaml
examples/schemas/proto/: user.proto
src/: add.rs  change_detection.rs  check.rs  config.rs  copy.rs  fetch.rs  git.rs  hooks.rs  init.rs  interactive.rs  lib.rs  llms.rs  llms_guide.md  lockfile.rs  ls.rs  main.rs  rm.rs  schema.rs  self_update.rs  sync.rs  validate.rs
