[package]
name = "skem"
version = "0.1.0"
edition = "2021"
authors = ["Hironori Yamamoto <hiro.o918@gmail.com>"]
description = "A lightweight CLI tool to download specific files from remote Git repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiro-o918/skem"
keywords = ["cli", "git", "dependency", "sync"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "skem"
path = "src/lib.rs"

[[bin]]
name = "skem"
path = "src/main.rs"

[dependencies]
# 非同期ランタイム（軽量化のため rt と macros のみ）
tokio = { version = "1.42", features = ["rt", "macros", "rt-multi-thread"] }

# CLI フレームワーク
clap = { version = "4.5", features = ["derive"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON Schema 生成
schemars = "0.8"

# エラーハンドリング
anyhow = "1.0"

# 一時ディレクトリ
tempfile = "3.15"

[dev-dependencies]
# テスト用

[profile.release]
opt-level = "z"     # サイズ最適化
lto = true          # Link Time Optimization
codegen-units = 1   # 最適化を優先
strip = true        # シンボル削除
