[package]
name = "skem"
version = "0.1.0"
edition = "2021"
authors = ["Hironori Yamamoto <hiro.o918@gmail.com>"]
description = "A lightweight CLI tool to download specific files from remote Git repositories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiro-o918/skem"
keywords = ["cli", "git", "dependency", "sync"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "skem"
path = "src/lib.rs"

[[bin]]
name = "skem"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
tempfile = "3.15"
walkdir = "2.5"

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
