[package]
name = "skem"
version = "0.2.1"
edition = "2021"
authors = ["Hironori Yamamoto"]
description = "A lightweight CLI tool to download specific files from remote Git repositories"
license = "MIT"
repository = "https://github.com/hiro-o918/skem"
keywords = ["cli", "git", "dependency", "sync"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "skem"
path = "src/lib.rs"

[[bin]]
name = "skem"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
inquire = "0.9"
tempfile = "3.15"
walkdir = "2.5"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
